--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "nodemon": "^2.0.7"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "connect-flash": "^0.1.1",
     "connect-mongodb-session": "^2.4.1",
     "cookie": "^0.4.1",
+    "csurf": "^1.11.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
@@ -24,6 +27,8 @@
     "mongodb": "^3.6.4",
     "mongoose": "^5.11.18",
     "mysql2": "^2.2.5",
+    "nodemailer": "^6.5.0",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "pug": "^3.0.0",
     "sequelize": "^6.5.0"
   }
