--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
     "express-session": "^1.17.1",
+    "express-validator": "^6.10.0",
     "mongodb": "^3.6.4",
     "mongoose": "^5.11.18",
     "mysql2": "^2.2.5",
