--- a/package.json
+++ b/package.json
@@ -27,10 +27,13 @@
     "express-validator": "^6.10.0",
     "mongodb": "^3.6.4",
     "mongoose": "^5.11.18",
+    "multer": "^1.4.2",
     "mysql2": "^2.2.5",
     "nodemailer": "^6.5.0",
     "nodemailer-sendgrid-transport": "^0.2.0",
-    "pug": "^3.0.0",
-    "sequelize": "^6.5.0"
+    "pdfkit": "^0.12.1",
+    "pug": "^3.0.2",
+    "sequelize": "^6.5.0",
+    "stripe": "^8.144.0"
   }
 }
